<resources>
    <string name="app_name">Instagram</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password">Password must be longer than 6 digits</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email is %</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Followed</string>
    <string name="sample_string">---</string>
    <string name="search_hint">Search by User name</string>
    <string name="auth_failed">auth_failed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_user_feed">User Feed</string>
    <string name="title_discover">Discover</string>
    <string name="title_photo">Photo</string>
    <string name="title_activity_feed">Activity Feed</string>
    <string name="title_profile">Profile</string>
    <string name="title_followers">Followers</string>
    <string name="title_posts">Posts</string>
    <string name="title_following">Following</string>
    <string name="title_you">You</string>
    <string name="title_my_posts">My Posts:</string>
    <string name="title_whats_new">What\'s New</string>
    <string name="title_popular">These people are popular:</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_follow_self">%1$s Started following you</string>
    <string name="activity_follow">%1$s Started following %2$s</string>
    <string name="activity_like_self">%1$s Liked your post</string>
    <string name="activity_liked">%1$s Liked %2$s\'s post</string>
</resources>
