<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_user_feed"
        android:icon="@drawable/ic_UserFeed"
        android:title="@string/title_user_feed" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_Discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_photo"
        android:icon="@drawable/ic_Photo"
        android:title="@string/title_photo" />

    <item
        android:id="@+id/navigation_activity_feed"
        android:icon="@drawable/ic_ActivityFeed"
        android:title="@string/title_activity_feed" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_Profile"
        android:title="@string/title_profile" />

</menu>
